# Fastapi-authentication

./: app.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 480ce1ca469d_.py  59dc86e3a63f_.py  655897bd6165_.py
api/: __init__.py  auth.py  profiles.py  users.py  users_api.py
db/: courses_tables.py  database.py  mixins.py  models.py  user_tables.py
schemas/: codes.py  courses.py  profiles.py  users.py
services/: auth_service.py  email_service.py  mixins_code.py  profile_service.py  reset_pass_service.py  users_service.py
