[tool.poetry]
name = "fastapi codealone"
version = "0.1.0"
description = ""
authors = ["Lumes-master <Lumes119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
