[tool.poetry]
name = "fastapi codealone"
version = "0.1.0"
description = ""
authors = ["Lumes-master <Lumes119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
